
4.94  2014-04-19

4.93  2014-04-13
  - Fixed bug where Mojolicious::Static would not use the correct default MIME
    type.

4.92  2014-04-08
  - Removed deprecated use of hash references for optgroup generation with
    select_field helper.
  - Improved dumper helper to escape unprintable characters.
  - Fixed small handler detection bug in Mojolicious::Renderer.

4.91  2014-03-29
  - Added daemonize method to Mojo::Server.
  - Added ensure_pid_file method to Mojo::Server::Prefork.
  - Removed deprecated secret method from Mojolicious.
  - Improved performance of Mojolicious::Plugin::EPRenderer and
    Mojolicious::Plugin::EPLRenderer.
  - Improved Mojo::Reactor::Poll portability with POLLPRI support.

4.90  2014-03-16
  - Removed deprecated to_rel method from Mojo::URL.
  - Updated IO::Socket::SSL requirement to 1.84 due to breaking changes in
    IO::Socket::SSL.
  - Improved documentation browser with more accessible links and readable
    inline code.
  - Fixed textarea and title parsing bugs in Mojo::DOM::HTML.

4.89  2014-03-13
  - Added support for template variants.
  - Improved built-in templates with unobtrusive menu bar.
  - Fixed bug in Mojo::DOM::HTML where non-self-closing elements were not
    handled correctly.
  - Fixed bug in Mojo::DOM::HTML where <image> was not treated as an alias for
    <img>.

4.88  2014-03-09
  - Added build_controller method to Mojolicious.
  - Added match method to Mojolicious::Routes.
  - Improved Mojo::Server::Daemon to handle setuid/setgid errors more
    gracefully.
  - Improved Mojo::Server::Prefork to handle lock file errors more gracefully.
  - Improved exception page to show better context information for templates.
  - Fixed comment on last line bug in Mojo::Template.

4.87  2014-03-04
  - Improved Mojo::ByteStream to allow more method chaining.
  - Fixed RFC 7159 support in Mojo::JSON.
  - Fixed RFC 7159 compliance bugs in Mojo::Transaction::WebSocket and
    Test::Mojo.
  - Fixed Unicode bugs in Test::Mojo.
