@@ -1,5 +1,6 @@
 
 4.94  2014-04-19
+  - Relaxed name handling in Mojo::Headers a little.
 
 4.93  2014-04-13
   - Fixed bug where Mojolicious::Static would not use the correct default MIME
